feat: image details page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.disabled-link {
+    pointer-events: none;
+    color: #ccc;
+    cursor: default;
+}
