feat: heroicon sort icons
Adjusted the header flex to place icons to the right of the sort.
Added the Header code to use header-flex to render.

may require:  npm install @heroicons/react
to get the icons.

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,3 +80,10 @@
     color: #ccc;
     cursor: default;
 }
+
+.header-flex {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  gap: 4px;
+}
